--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -301,7 +301,7 @@ body.dark-theme{
   background: linear-gradient(170deg,
   hsl(0,0%,22%) 0%,
   hsl(0,0%,6%) 30%);
-  padding-bottom: 0;
+  padding-bottom: 8;
 }
 
 .home__cointainer{
@@ -377,15 +377,17 @@ body.dark-theme{
   position: relative;
   display: flex;
   justify-content: center;
+  bottom: -32px;
 }
 
 .home__orbe{
-  width: 265px;
-  height: 284px;
+  width: 280px;
+  height: 300px;
   background: linear-gradient(180deg,
-  hsl(0,0%,16%) 93%,
+  hsl(0,0%,16%) 20%,
   hsl(0,0%,67%) 100%);
-  border-radius: 135px 135px 0 0;
+  border-radius: 25px 25px 25px 25px;
+  bottom: 1.25rem;
 }
 
 .home__img{
@@ -393,10 +395,10 @@ body.dark-theme{
   width: 250px;
   height: 300px;
   overflow: hidden;
-  border-radius: 125px 125px 12px 12px;
+  border-radius: 25px 25px 25px 25px;
   display: inline-flex;
   align-items: flex-end;
-  bottom: -1.5rem;
+  bottom: 0rem;
   box-shadow: 0 16px 32px hsla(700, 66%, 25%, .25);
 }
 /*=============== BUTTON ===============*/
